[package]
name = "mirabel_skat"
authors = ["vilaureu"]
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies.mirabel]
git = "https://github.com/vilaureu/mirabel_rs"
rev = "fd6c277cfc27f3227bfdf5d8beccff46c84e09d7"
default-features = false

[profile.release]
panic = "abort"
lto = "thin"
strip = true
