[package]
name = "mirabel_skat"
authors = ["vilaureu"]
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
nom = "7.1"

[dependencies.mirabel]
git = "https://github.com/vilaureu/mirabel_rs"
rev = "3f290846f92a0f550c2268b81324b5345218a547"
default-features = false

[profile.release]
panic = "abort"
lto = "thin"
strip = true
